syntax = "proto3";

package lifelog;

service Lifelog {
    rpc RegisterCollector(CollectorRegistrationRequest) returns (CollectorRegistrationResponse);
    rpc SendData(CollectorData) returns (DataAck);
    rpc GetStatus(CollectorStatusRequest) returns (CollectorStatusResponse);
    rpc UpdateConfig(CollectorConfig) returns (ConfigAck);
    rpc QueryDataFromCollector(CollectorQuery) returns (CollectorData);
}

message CollectorRegistrationRequest {
    string config = 1;
}

message CollectorRegistrationResponse {
    bool success = 1;
}

message CollectorData {
    string id = 1;
    bytes data = 2;
}


message DataAck {
    bool success = 1;
}
