syntax = "proto3";
package lifelog;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

message LifelogData {
  oneof payload {
  }
}
